--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,7 @@ h1 {
   text-align: center;
   padding: 25px;
   background: #2d2b30;
-  position: fixed;
+  /*position: fixed;*/
   width: 100%;
   display: flex;
   -webkit-display: flex;
@@ -586,33 +586,6 @@ ul.filter-select button:after {
   width: 1px;
   background: #d1d6d9; }
 
-.arrows {
-  width: 100%;
-  z-index: 60;
-  position: absolute;
-  display: flex;
-  justify-content: space-around;
-  position: fixed;
-  /*background: url(images/left-arrow.png) left 48% no-repeat;
-  background: url(images/right-arrow.png) right 48% no-repeat;*/
-  margin-top: calc(23% + 30px); }
-
-#leftArrow {
-  margin-left: -10%;
-  background-color: #ECDDBE;
-  border-radius: 50%; }
-  #leftArrow:hover {
-    transform: scale(0.9);
-    background-color: #FCAD0D; }
-
-#rightArrow {
-  margin-right: -10%;
-  background-color: #ECDDBE;
-  border-radius: 50%; }
-  #rightArrow:hover {
-    transform: scale(0.9);
-    background-color: #FCAD0D; }
-
 /* Link Styles */
 a {
   text-decoration: none;
@@ -632,7 +605,7 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 15.625em; }
+  /*margin-top: em(250px);*/ }
   @media (max-width: 435px) {
     #imageGallery {
       margin-top: 50px; } }
@@ -652,6 +625,162 @@ a:hover {
 #imageGallery .layout img:hover {
   -webkit-transform: scale3d(1.1, 1.1, 1.1);
   transform: scale3d(1.1, 1.1, 1.1); }
+
+#albums .layout img {
+  -webkit-transition: -webkit-transform 0.15s ease 0s;
+  -moz-transition: -moz-transform 0.15s ease 0s;
+  -o-transition: -o-transform 0.15s ease 0s;
+  transition: transform 0.15s ease 0s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  border: 3px solid #fff;
+  margin-bottom: 30px;
+  height: 200px;
+  width: 200px; }
+
+#albums .layout img:hover {
+  -webkit-transition: -webkit-transform 0.15s ease 0s;
+  -moz-transition: -moz-transform 0.15s ease 0s;
+  -o-transition: -o-transform 0.15s ease 0s;
+  transition: transform 0.15s ease 0s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1); }
+
+#albums, #albums3, #albums4 {
+  margin: 0 auto;
+  margin-top: 3.75em;
+  padding: 40px;
+  display: block;
+  max-width: 1040px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  /*margin: 10px ;*/ }
+
+#albums2 {
+  margin: 0 auto;
+  margin-top: 3.75em;
+  padding: 40px;
+  display: block;
+  max-width: 1040px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  /*margin: 10px ;*/ }
+
+#albums3 {
+  margin: 0 auto;
+  margin-top: 3.75em;
+  padding: 40px;
+  display: block;
+  max-width: 1040px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  /*margin: 10px ;*/ }
+
+#albums img {
+  -webkit-transition: -webkit-transform 0.15s ease 0s;
+  -moz-transition: -moz-transform 0.15s ease 0s;
+  -o-transition: -o-transform 0.15s ease 0s;
+  transition: transform 0.15s ease 0s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  border: 3px solid #fff;
+  margin-bottom: 30px;
+  height: 200px;
+  width: 200px; }
+
+#albums2 img {
+  -webkit-transition: -webkit-transform 0.15s ease 0s;
+  -moz-transition: -moz-transform 0.15s ease 0s;
+  -o-transition: -o-transform 0.15s ease 0s;
+  transition: transform 0.15s ease 0s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  border: 3px solid #fff;
+  margin-bottom: 30px;
+  height: 200px;
+  width: 200px; }
+
+#albums3 img {
+  -webkit-transition: -webkit-transform 0.15s ease 0s;
+  -moz-transition: -moz-transform 0.15s ease 0s;
+  -o-transition: -o-transform 0.15s ease 0s;
+  transition: transform 0.15s ease 0s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  border: 3px solid #fff;
+  margin-bottom: 30px;
+  height: 200px;
+  width: 200px; }
+
+#albums4 .layout img {
+  -webkit-transition: -webkit-transform 0.15s ease 0s;
+  -moz-transition: -moz-transform 0.15s ease 0s;
+  -o-transition: -o-transform 0.15s ease 0s;
+  transition: transform 0.15s ease 0s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  border: 3px solid #fff;
+  margin-bottom: 30px;
+  height: 200px;
+  width: 200px; }
+
+#albums4 .layout img::before {
+  display: none; }
+
+#container {
+  width: 80%;
+  margin: 9em auto !important;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1em;
+  opacity: 0.9; }
+
+label {
+  font-weight: bold;
+  font-size: 2em;
+  vertical-align: middle; }
+
+#movieTitle h1 {
+  font-size: 2.2em !important; }
+
+#movieYear h3 {
+  font-size: 1.5em !important; }
+
+#btnGetInfo {
+  color: #fff;
+  background-color: blue;
+  border-radius: 5px;
+  padding: 0.5em;
+  border: 1px solid;
+  cursor: pointer; }
+
+button {
+  color: #fff;
+  background-color: red;
+  border-radius: 5px;
+  padding: 0.5em;
+  border: 1px solid;
+  cursor: pointer; }
+
+button:hover {
+  background-color: black; }
+
+#poster {
+  float: left;
+  width: 25%; }
+
+#movieHeader input {
+  height: 20px;
+  margin: 1.2em 0.5em;
+  padding: 0.5em;
+  border-radius: 5px;
+  border: 1px solid #000; }
 
 /*@import "media";*/
 /*@import "footer";*/
