--- a/css/main.css
+++ b/css/main.css
@@ -567,7 +567,7 @@ ul.filter-select button {
       height: 3.125em; } }
 
 ul.filter-select button:hover:after, ul.filter-select button.selected:after, li:last-child ul.filter-select button:after {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  /*filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);*/
   opacity: 0; }
 
 ul.filter-select button:hover {
